@@ -143,6 +143,7 @@ Version 1.5
  - Add Aeotec ZW116 Nano Switch (Nechry)
  - Issue #1046 - Add Config for TZ45A from RCS (darrinsmart)
  - Add Zipato ZP3102-EU Multisensor Duo (Nechry)
+ - Add homeseer hs-wd100plus (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
